# OpenEnv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  run_tests.py
backend/: .env.example  .gitignore  inference.py  main.py  requirements.txt
backend/api/: __init__.py  main.py  schemas.py
backend/models/: train_models.py
backend/openenv/: __init__.py  agent.py  environment.py  feature_contract.py  graders.py  models.py  pipeline.py  scenarios.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AIInsights.jsx  ActionPanel.jsx  CausalDagViewer.jsx  Header.jsx  Leaderboard.jsx  MetricsChart.jsx  ServiceHealthPanel.jsx
server/: app.py
